--- a/public/main.html
+++ b/public/main.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div id="depth">wawa</div>
   <canvas id="gameCanvas" width="1000" , height="400"></canvas>
   <canvas id="emojiCanvas" width="300" , height="300"></canvas>
   <canvas id="chatCanvas" width="698" , height="300"></canvas>
